test/Fail/Issue146.err
test/Fail/Issue146.agda:21.3-12: error: [CustomBackendError]
agda2hs: not supported in Haskell: copatterns
